chore(build): harden gradle tooling and normalize crawler scripts